--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@
 }
 
 .principal__lista{
-    background-color: aquamarine;
     display: flex;
     justify-content: space-between;
     
@@ -49,7 +48,7 @@
 }
 
 #drop-area{
-    background-color: blueviolet;
+    background-color:aliceblue;
 }
 
 /*CLASSES DE EDIÇÃO DOS ÍCONES */
@@ -62,10 +61,6 @@
     width: 100px;
     height: 100px;
     flex-wrap: wrap;
-    background-color: blue;
-    
-    
-
 }
 
 .icone__imagem {
