--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,11 @@
     margin-right: auto;
     margin-top: 5%;    
 }
+
+.principal__arquivos__imagem{
+    width: 90%;
+    height: 90%;
+    margin-left: auto;
+    margin-right: auto;
+
+}
