--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 
 .principal__arquivos{
     margin-left: 10px;
-    height: 90%;
+    height: 100vh;
     width: 1000px;
     border: 1px solid black;
 }
