--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,11 @@
     margin-right: auto;
 
 }
+
+.menuExclusao{
+    display: none;
+    position: absolute;
+    width: 5%;
+    height: 5%;
+    background-color: black;
+}
