--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,8 @@
     position: absolute;
     width: 5%;
     height: 5%;
-    border: 1px solid bisque;
+    text-align: center;
+    border: 1px solid black;
 
 }
 
