--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,8 @@
     position: absolute;
     width: 5%;
     height: 5%;
+    display: flex;
+    align-items: center;
     text-align: center;
     border: 1px solid black;
 
