--- a/css/style.css
+++ b/css/style.css
@@ -99,12 +99,13 @@
 
 .menuExclusao{
     position: absolute;
-    width: 3%;
-    height: 3%;
+    width: 4%;
+    height: 4%;
     display: flex;
     align-items: center;
     text-align: center;
     border: 1px solid black;
+    background-color: #F1F0E9;
 
 }
 
